too many changes

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
 												<label class="control-label"></label>
 												<!-- Button -->
 												<div class="controls">
-													<button class="btn btn-primary">Search</button>
+													<button class="btn btn-warning">Search</button>
 												</div>
 											</div>
 										</fieldset>
@@ -179,7 +179,7 @@
 
 										<footer>
 												<span class="date">11/12/2012</span>
-												<a href="#" class="btn btn-primary">Apply</a>
+												<a href="#" class="btn btn-warning">Apply</a>
 												<div class="btn-group">
 													<button class="btn"><i class="icon-star"></i> Shortlist</button>
 													<button class="btn dropdown-toggle" data-toggle="dropdown">
@@ -220,7 +220,7 @@
 
 										<footer>
 												<span class="date">11/12/2012</span>
-												<a href="#" class="btn btn-primary">Apply</a>
+												<a href="#" class="btn btn-warning">Apply</a>
 												<div class="btn-group">
 													<button class="btn"><i class="icon-star"></i> Shortlist</button>
 													<button class="btn dropdown-toggle" data-toggle="dropdown">
@@ -261,7 +261,7 @@
 
 										<footer>
 												<span class="date">11/12/2012</span>
-												<a href="#" class="btn btn-primary">Apply</a>
+												<a href="#" class="btn btn-warning">Apply</a>
 												<div class="btn-group">
 													<button class="btn"><i class="icon-star"></i> Shortlist</button>
 													<button class="btn dropdown-toggle" data-toggle="dropdown">
@@ -302,7 +302,7 @@
 
 										<footer>
 												<span class="date">11/12/2012</span>
-												<a href="#" class="btn btn-primary">Apply</a>
+												<a href="#" class="btn btn-warning">Apply</a>
 												<div class="btn-group">
 													<button class="btn"><i class="icon-star"></i> Shortlist</button>
 													<button class="btn dropdown-toggle" data-toggle="dropdown">
@@ -343,7 +343,7 @@
 
 										<footer>
 												<span class="date">11/12/2012</span>
-												<a href="#" class="btn btn-primary">Apply</a>
+												<a href="#" class="btn btn-warning">Apply</a>
 												<div class="btn-group">
 													<button class="btn"><i class="icon-star"></i> Shortlist</button>
 													<button class="btn dropdown-toggle" data-toggle="dropdown">
