--- a/public/level2.html
+++ b/public/level2.html
@@ -126,7 +126,7 @@
 												</li>
 											</ul>
 
-											<button type="submit" class="btn btn-primary small">Update</button>
+											<button type="submit" class="btn btn-warning small">Update</button>
 
 											<hr/>
 
@@ -140,7 +140,7 @@
 												<input class="span2" id="prependedInput" type="text" placeholder="Maximum">
 											</div>
 
-											<button type="submit" class="btn btn-primary small">Update</button>
+											<button type="submit" class="btn btn-warning small">Update</button>
 
 										</form>
 														
@@ -168,7 +168,7 @@
 													</ul>
 												</div>
 
-												<a href="#" class="btn btn-primary pull-left">Apply</a>
+												<a href="#" class="btn btn-warning pull-left">Apply</a>
 												<span class="date">11/12/2012</span>	
 											</div>
 											<div class="media-body">
@@ -201,7 +201,7 @@
 													</ul>
 												</div>
 
-												<a href="#" class="btn btn-primary pull-left">Apply</a>
+												<a href="#" class="btn btn-warning pull-left">Apply</a>
 												<span class="date">11/12/2012</span>	
 											</div>
 											<div class="media-body">
