--- a/public/profile.html
+++ b/public/profile.html
@@ -61,7 +61,7 @@
 										      <ul>
 										      	<li><label for="nav-username">Username</label><input type="text" id="nav-username" name="username" /></li>
 										      	<li><label for="nav-password">Password</label><input type="password" id="nav-password" name="password" /></li>
-										      	<li><input type="submit" class="btn btn-primary pull-right" value="Sign In" /></li>
+										      	<li><input type="submit" class="btn btn-warning pull-right" value="Sign In" /></li>
 										      </ul>
 										    </form>											
 																					</div>
@@ -105,7 +105,7 @@
 													<li><label for="password">Password</label><input type="password" name="password" id="password"></li>
 													<li><label for="password_confirmation">Confirm Password</label><input type="password" name="password_confirmation" id="password_confirmation"></li>
 													<li>
-														<input type="submit" class="btn btn-primary pull-right" value="Save">
+														<input type="submit" class="btn btn-warning pull-right" value="Save">
 													</li>
 											</ol>
 										</form>
@@ -129,7 +129,7 @@
 													<input type="text" name="years-exp" id="years-exp">
 												</li>
 												<li>
-														<input type="submit" class="btn btn-primary pull-right" value="Save">
+														<input type="submit" class="btn btn-warning pull-right" value="Save">
 												</li>
 											</ol>
 										</form>
